# G-ForceZero

./: .gitignore  Dockerfile  README.md  kaggle_supervised_snippet.txt  kaggle_training_snippet.txt
cpp_engine/: CMakeCache.txt  CMakeLists.txt  Makefile  autopilot.py  cmake_install.cmake  download_syzygy.py  fix_eval  fix_eval.cpp  get_uci.py  nnue.cpp  nnue.hpp  nnue_engine  nnue_engine.cpp  syzygy_probe.hpp  temp_engine.cpp  test_endgame.cpp  test_endgame_mask  test_endgame_mask.cpp  test_eval_details  test_eval_details.cpp  test_eval_simple  test_eval_simple.cpp  test_passed  test_passed.cpp  test_score.cpp  train_halfkp.py
cpp_engine/src/: nnue_engine.cpp  pgn_to_epd.cpp  selfplay.hpp
cpp_engine/trainer/: train_halfkp.py
cpp_engine_2.0/: CMakeLists.txt  gforce_engine  parse_nnue.py  patch.py
cpp_engine_2.0/src/: custom_nnue.cpp  custom_nnue.hpp  gforce_engine.cpp
cpp_engine_2.0/src/sf_bridge/: CMakeLists.txt
render/: config.yml
